Keep MMAPI breadcrumbs API 23 compatible